--- a/NiceBikeG5/MainPage.xaml
+++ b/NiceBikeG5/MainPage.xaml
@@ -1,41 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NiceBikeG5.MainPage">
+             x:Class="NiceBikeG5.MainPage"
+             BackgroundColor="DarkGrey">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
+    <VerticalStackLayout
+            Spacing="50"
+            Padding="50,0"
+            VerticalOptions="Center"
+            HorizontalOptions="Center">
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
-
-            <Label
-                Text="Hello, World!"
+        <Label
+                Text="Choose your profile"
+                TextColor="Black"
                 SemanticProperties.HeadingLevel="Level1"
                 FontSize="32"
                 HorizontalOptions="Center" />
 
-            <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
+        <Button
+                x:Name="RCBtn"
+                Text="RC"
+                LineBreakMode="WordWrap"
+                BackgroundColor="LightGreen"
+                TextColor="Black"
+                FontSize="50"
+                WidthRequest="400"
+                HeightRequest="400"  
+                CornerRadius="200"
+                BorderColor="Green"
+                BorderWidth="5"
+                SemanticProperties.Hint="Open the RC view"
+                Clicked="OnRcBtnClicked"
                 HorizontalOptions="Center" />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
-
-        </VerticalStackLayout>
-    </ScrollView>
+    </VerticalStackLayout>
 
 </ContentPage>
